--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://manage-landing-page1999.vercel.app'"
               >
                 Live Demo
               </button>
@@ -287,9 +287,9 @@
                 Github
               </button>
               <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://manage-landing-page1999.vercel.app'"
+            >
                 Live Demo
               </button>
             </div>
@@ -311,9 +311,9 @@
                 Github
               </button>
               <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://manage-landing-page1999.vercel.app/'"
+            >
                 Live Demo
               </button>
             </div>
