--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img class="arash-img" src="./assets/arash.jpeg" alt="Arash profile picture" />
+        <img class="arash-img" src="./assets/arash.png" alt="Arash profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -74,14 +74,14 @@
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
-      <div class="section-container">
-        <div class="section__pic-container">
+      <div class="">
+        <!-- <div class="section__pic-container">
           <img
             src="./assets/arash.jpeg"
             alt="Profile picture"
             class="about-pic"
           />
-        </div>
+        </div> -->
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
@@ -103,11 +103,11 @@
               <p>M.Sc. Masters Degree<br /> University of New Brunswick</p>
             </div>
           </div>
-          <div class="text-container">
+          <!-- <div class="text-container">
             <p>
               +4 years experience in developing robust software solutions for academia and industry
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
